Home page + Floor Layouts + Input New User Review

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,8 +13,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="88dp"
         android:layout_marginBottom="8dp"
-        android:onClick="arbor"
-        android:text="Arbor Grill"
+        android:onClick="education"
+        android:text="Education Building"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
@@ -38,8 +38,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="88dp"
-        android:onClick="laural"
-        android:text="Laural Hall"
+        android:onClick="sierra"
+        android:text="Sierra Hall"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
